split into folders, myaccount and mysuper

--- a/app/src/main/res/layout/activity_manager_page.xml
+++ b/app/src/main/res/layout/activity_manager_page.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@color/green"
 
-    tools:context=".ManagerPage">
+    tools:context=".Manager.ManagerPage">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
