--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="1500dp"
-    tools:context=".MyAccountActivity">
+    tools:context=".MyAccount.MyAccountActivity">
 
     <EditText
         android:id="@+id/update_last_name"
