--- a/app/src/main/res/menu/manager_drawer_menu.xml
+++ b/app/src/main/res/menu/manager_drawer_menu.xml
@@ -7,6 +7,10 @@
             android:title="@string/my_cart"/>
         <item android:id="@+id/manager_page"
             android:title="@string/manager_page"/>
+        <item android:id="@+id/my_account"
+            android:title="My account"/>
+        <item android:id="@+id/my_super"
+            android:title="My super"/>
         <item android:id="@+id/logout"
             android:title="@string/log_out"/>
     </group>
