--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,8 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textAlignment">center</item>
 
+        <item name="android:editTextStyle">@style/myTextStyle</item>
+
         <item name="android:buttonStyle">@style/myButtonStyle</item>
     </style>
 
@@ -30,6 +32,12 @@
     <style name="Theme.SuperCheap.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.SuperCheap.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="myTextStyle" parent="android:Widget.Material.EditText">
+        <item name="android:background">@drawable/buttonstyle</item>
+        <item name="android:textColor">@color/black</item>
+
+    </style>
 
     <style name="myButtonStyle" parent="android:Widget.Material.Button">
         <item name="android:background">@drawable/buttonstyle</item>
