few touches on sign up and sign in xml's

--- a/app/src/main/res/layout/view_sighin.xml
+++ b/app/src/main/res/layout/view_sighin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/green"
-    tools:context=".SigninActivity">
+    tools:context=".SignIn.SigninActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/body_layer"
