--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpActivity">
+    tools:context=".SignUp.SignUpActivity">
 
     <EditText
         android:id="@+id/SignUpEntry"
@@ -25,6 +25,7 @@
         android:id="@+id/FirstNameLabel"
         android:layout_width="120dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:text="First Name:"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +35,7 @@
         android:id="@+id/FirstName"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="John"
         android:inputType="textPersonName"
@@ -44,8 +46,9 @@
         android:id="@+id/LastNameLabel"
         android:layout_width="120dp"
         android:layout_height="48dp"
-        android:text="LastName:"
+        android:layout_marginTop="12dp"
         android:gravity="center"
+        android:text="LastName:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/FirstNameLabel" />
 
@@ -53,6 +56,7 @@
         android:id="@+id/LastName"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Smith"
         android:inputType="textPersonName"
@@ -63,6 +67,7 @@
         android:id="@+id/EmailLabel"
         android:layout_width="120dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:text="Email:"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,6 +77,7 @@
         android:id="@+id/Email"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Example@gmail.com"
         android:inputType="textEmailAddress"
@@ -82,6 +88,7 @@
         android:id="@+id/UsernameLable"
         android:layout_width="120dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:text="Username:"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,6 +98,7 @@
         android:id="@+id/Username"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="JohnSmith"
         android:inputType="textPersonName"
@@ -101,6 +109,7 @@
         android:id="@+id/PasswordLabel"
         android:layout_width="120dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:text="Password:"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,6 +119,7 @@
         android:id="@+id/Password"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="**************"
         android:inputType="textPassword"
@@ -120,6 +130,7 @@
         android:id="@+id/CityLable"
         android:layout_width="120dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:text="City:"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -129,6 +140,7 @@
         android:id="@+id/City"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="Bet Shemesh"
         android:inputType="textPersonName"
@@ -139,6 +151,7 @@
         android:id="@+id/DateLabel"
         android:layout_width="120dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:text="Date of Birth:"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,6 +161,7 @@
         android:id="@+id/Date"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:hint="dd/MM/yyyy"
         android:inputType="date"
@@ -158,6 +172,7 @@
         android:id="@+id/GenderLabel"
         android:layout_width="120dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:text="Gender:"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DateLabel" />
@@ -166,6 +181,7 @@
         android:id="@+id/GenderGroup"
         android:layout_width="200dp"
         android:layout_height="100dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toEndOf="@+id/GenderLabel"
         app:layout_constraintTop_toBottomOf="@+id/Date">
 
@@ -224,7 +240,7 @@
         android:id="@+id/SignUpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="150dp"
         android:onClick="createUser"
         android:text="Sign up"
         app:layout_constraintEnd_toEndOf="parent"
@@ -236,6 +252,7 @@
         android:id="@+id/SuperNameLabel"
         android:layout_width="120dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:text=""
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -245,6 +262,7 @@
         android:id="@+id/SuperName"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:inputType="none"
         android:enabled="false"
         android:ems="10"
@@ -255,6 +273,7 @@
         android:id="@+id/SuperCityLabel"
         android:layout_width="120dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:text=""
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -264,6 +283,7 @@
         android:id="@+id/SuperCity"
         android:layout_width="200dp"
         android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:inputType="none"
         android:enabled="false"
         android:ems="10"
