--- a/app/src/main/res/layout/list_supers.xml
+++ b/app/src/main/res/layout/list_supers.xml
@@ -12,7 +12,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
+            android:layout_marginVertical="50dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -52,6 +52,23 @@
             android:layout_alignParentRight="true"
             android:text="price"
             android:id="@+id/totalPrice"/>
+
+        <TextView
+            android:id="@+id/rating"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="60dp"
+            android:padding="15dp"
+            android:text="Rating" />
+        <TextView
+            android:id="@+id/numComments"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="120dp"
+            android:padding="15dp"
+            android:text="Num Comments" />
     </RelativeLayout>
 
 </LinearLayout>
