--- a/app/src/main/res/layout/activity_get_super_info.xml
+++ b/app/src/main/res/layout/activity_get_super_info.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:textAlignment="center"
-    tools:context=".GetComment.GetCommentActivity">
+    tools:context=".GetSuperInfo.GetSuperInfoActivity">
 
     <TextView
         android:id="@+id/get_comments_title"
@@ -42,13 +42,24 @@
     <Button
         android:id="@+id/show_comments_botten"
         android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="52dp"
-        android:onClick="show"
-        android:text="get"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        android:onClick="show_comments"
+        android:text="get comments"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/get_commen_super_city_input" />
+
+    <Button
+        android:id="@+id/show_sales_botten"
+        android:layout_width="150dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="52dp"
+        android:onClick="show_saless"
+        android:text="get    sales"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.43"
+        app:layout_constraintStart_toEndOf="@+id/show_comments_botten"
         app:layout_constraintTop_toBottomOf="@+id/get_commen_super_city_input" />
 
     <EditText
