--- a/app/src/main/res/layout/activity_sale.xml
+++ b/app/src/main/res/layout/activity_sale.xml
@@ -10,11 +10,23 @@
         android:id="@+id/SaleItem"
         android:layout_width="95dp"
         android:layout_height="28dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="224dp"
         android:text="@string/enter_sale_item"
         android:textColor="#212121"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintHorizontal_bias="0.101"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/saleItem"
+        android:layout_width="95dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="152dp"
+        android:text="Enter sale name"
+        android:textColor="#212121"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.101"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,7 +57,7 @@
         android:layout_width="144dp"
         android:layout_height="37dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="36dp"
         android:text="enter company"
         android:textColor="#212121"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,13 +77,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.185"
         app:layout_constraintStart_toEndOf="@+id/PriceQuantity"
-        app:layout_constraintTop_toBottomOf="@+id/Sale_name" />
+        app:layout_constraintTop_toBottomOf="@+id/Item_Sale_name" />
 
     <EditText
-        android:id="@+id/Sale_name"
+        android:id="@+id/Item_Sale_name"
         android:layout_width="201dp"
         android:layout_height="48dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="140dp"
         android:autofillHints=""
         android:background="@color/white"
         android:hint="@string/add_item"
@@ -80,6 +92,22 @@
         android:textColorHint="#00838F"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintStart_toEndOf="@+id/SaleItem"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <EditText
+        android:id="@+id/sale_name"
+        android:layout_width="201dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="64dp"
+        android:autofillHints=""
+        android:background="@color/white"
+        android:hint="sale name"
+        android:inputType="text"
+        android:textColor="@color/black"
+        android:textColorHint="#00838F"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toEndOf="@+id/SaleItem"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
