get super info with hint

--- a/app/src/main/res/layout/activity_get_super_info.xml
+++ b/app/src/main/res/layout/activity_get_super_info.xml
@@ -68,8 +68,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="32dp"
         android:ems="10"
+        android:hint="insert super name"
         android:inputType="textPersonName"
-        android:text="insert super name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/get_commen_super_name_text"
         app:layout_constraintTop_toBottomOf="@+id/get_comments_title" />
@@ -80,8 +80,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="28dp"
         android:ems="10"
+        android:hint="insert super city"
         android:inputType="textPersonName"
-        android:text="insert super city"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toEndOf="@+id/get_commen_super_city_text"
