--- a/app/src/main/res/layout/activity_drawer_manager.xml
+++ b/app/src/main/res/layout/activity_drawer_manager.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".DrawerBaseActivity"
     tools:openDrawer="start"
-    android:fitsSystemWindows="true"
-    >
+    android:fitsSystemWindows="true">
+
     <include layout="@layout/content_layout"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
@@ -18,7 +18,9 @@
         android:layout_gravity="start"
         android:id="@+id/nav_view"
         app:headerLayout="@layout/main_drawer_header"
-        app:menu="@menu/manager_drawer_menu"/>
+        app:menu="@menu/manager_drawer_menu"
+        android:background="@color/white"
+        />
 
 
 
