--- a/app/src/main/res/layout/activity_create_cart.xml
+++ b/app/src/main/res/layout/activity_create_cart.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,88 +12,126 @@
 
     <TextView
         android:id="@+id/City_Create"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="26sp"
-        android:text="Enter City" />
+        android:layout_width="125dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="16dp"
+        android:text="City:"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/Cart_City"
+        app:layout_constraintHorizontal_bias="0.38"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Cart_City"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_width="204dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="4dp"
+
         android:background="@color/white"
         android:hint="Add City"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        app:layout_constraintTop_toBottomOf="@+id/City_Create" />
     <TextView
         android:id="@+id/Choose_Item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enter Product Name"
-        android:textSize="26sp"
-        app:layout_constraintTop_toBottomOf="@+id/Cart_City"
-        />
+        android:layout_width="125dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:text="Product:"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/City_Create" />
 
     <EditText
         android:id="@+id/Cart_Item"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_width="206dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:background="@color/white"
         android:hint="Add Product"
-        app:layout_constraintTop_toBottomOf="@+id/City_Create" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Choose_Item"
+        app:layout_constraintTop_toBottomOf="@+id/Cart_City" />
+
     <TextView
         android:id="@+id/Choose_Company"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enter Company Name"
-        android:textSize="26sp"
-        app:layout_constraintTop_toBottomOf="@+id/Cart_Item"
-        />
+        android:layout_width="125dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:text="Company:"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Choose_Item" />
 
     <EditText
         android:id="@+id/company_item_name"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_width="209dp"
+        android:layout_height="37dp"
+
+        android:layout_marginTop="16dp"
         android:background="@color/white"
         android:hint="Add Company"
-
-        app:layout_constraintTop_toBottomOf="@+id/Choose_Company" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Cart_Item" />
 
     <TextView
         android:id="@+id/choose_quantity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Enter Quantity"
-        android:textSize="26sp"
-        app:layout_constraintTop_toBottomOf="@+id/Cart_Item" />
+        android:layout_width="125dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="1dp"
+        android:text="Quantity:"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/add_quantity"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Choose_Company" />
 
     <EditText
         android:id="@+id/add_quantity"
-        android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_width="209dp"
+        android:layout_height="37dp"
+
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="4dp"
         android:background="@color/white"
         android:hint="Add quantity"
         android:inputType="number"
-
-        app:layout_constraintTop_toBottomOf="@+id/Choose_Company" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/company_item_name" />
 
     <Button
         android:id="@+id/insert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="56dp"
         android:onClick="AddToList"
-        android:text="add" />
+        android:text="add"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_quantity" />
 
     <ListView
         android:id="@+id/my_list"
         android:layout_width="353dp"
         android:layout_height="308dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:background="@color/white"
         android:scrollbars="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/insert" />
 
     <Button
@@ -101,12 +139,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="32dp"
         android:onClick="ShowCheaper"
         android:text="apply"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.585"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/my_list" />
 
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
