--- a/app/src/main/res/layout/list_sales.xml
+++ b/app/src/main/res/layout/list_sales.xml
@@ -30,7 +30,8 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="23dp"
             android:layout_marginTop="23dp"
-            android:text="prodact name" />
+            android:text="product name"
+            android:textSize="20dp"/>
 
         <TextView
             android:id="@+id/list_sales_product_quantity"
@@ -40,7 +41,8 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="19dp"
             android:layout_marginTop="11dp"
-            android:text="quantity:" />
+            android:text="quantity:"
+            android:textSize="20dp"/>
 
         <TextView
             android:id="@+id/list_sales_price"
@@ -50,7 +52,8 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="23dp"
             android:layout_marginTop="12dp"
-            android:text="price:" />
+            android:text="price:"
+            android:textSize="20dp"/>
 
         <TextView
             android:id="@+id/list_sales_product_company"
@@ -62,7 +65,8 @@
             android:layout_marginTop="22dp"
             android:layout_marginEnd="24dp"
             android:layout_toEndOf="@+id/list_sales_product_name"
-            android:text="prodact company" />
+            android:text="product company"
+            android:textSize="20dp"/>
 
         <TextView
             android:id="@+id/list_sales_product_quantity_value"
@@ -72,7 +76,8 @@
             android:layout_marginStart="1dp"
             android:layout_marginTop="12dp"
             android:layout_toEndOf="@+id/list_sales_product_quantity"
-            android:text="number" />
+            android:text="number"
+            android:textSize="20dp"/>
 
         <TextView
             android:id="@+id/list_sales_product_price_value"
@@ -83,6 +88,7 @@
             android:layout_marginTop="12dp"
             android:layout_toEndOf="@+id/list_sales_price"
             android:text="number"
-            android:textColor="@android:color/holo_red_dark" />
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="20dp"/>
     </RelativeLayout>
 </LinearLayout>
